--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
     <div class="container">
         <div id="cssmenu">
             <ul>
-                <li class="header-nav active"><a href="index.html">The John Bot</a></li>
+                <li class="header-nav active"><a href="index.ejs">The John Bot</a></li>
                 <li><a href="http://joshseides.com/html/about.html">About</a></li>
                 <li><a href="http://joshseides.com/html/business.html">Business</a></li>
             </ul>
