--- a/views/process.ejs
+++ b/views/process.ejs
@@ -38,9 +38,9 @@
     <div class="container">
         <div id="cssmenu">
             <ul>
-                <li class="header-nav active"><a href="/">The John Bot</a></li>
+                <li class="header-nav"><a href="/">The John Bot</a></li>
                 <li><a href="/documentation">Documentation</a></li>
-                <li><a href="/process">Process</a></li>
+                <li class="active"><a href="/process">Process</a></li>
             </ul>
 
             <a href="https://www.facebook.com/johnbot" class="buy-btn pull-right far-end" target="_blank"><i class="fa fa-fw fa-facebook" id="social1"></i></a>
