--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -38,8 +38,8 @@
     <div class="container">
         <div id="cssmenu">
             <ul>
-                <li class="header-nav active"><a href="/">The John Bot</a></li>
-                <li><a href="/documentation">Documentation</a></li>
+                <li class="header-nav"><a href="/">The John Bot</a></li>
+                <li class="active"><a href="/documentation">Documentation</a></li>
                 <li><a href="/process">Process</a></li>
             </ul>
 
