--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,6 @@
 <body>
 
 <!-- Nav Menu -->
-
 <div id="header" class="nav-header">
     <div class="container">
         <div id="cssmenu">
@@ -51,6 +50,33 @@
 
 <div class="space"></div>
 
+<div class="social-media">
+    <h1>Social Media + Email</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <i class="fa fa-5x fa-linkedin"></i>
+            <hr>
+            <h2>LinkedIn</h2>
+            <a href="http://www.linkedin.com/in/josh-seides-852170ab" class="btn btn-primary social-btn pull-right" target="_blank"><i class="fa fa-arrow-right"></i></a>
+            <p>Josh Seides</p>
+        </div>
+        <div class="col-md-4">
+            <i class="fa fa-5x fa-twitter"></i>
+            <hr>
+            <h2>Twitter</h2>
+            <a href="http://twitter.com/technocademy" class="btn btn-primary social-btn pull-right" target="_blank"><i class="fa fa-arrow-right"></i></a>
+            <p>@Technocademy</p>
+        </div>
+        <div class="col-md-4">
+            <i class="fa fa-5x fa-envelope"></i>
+            <hr>
+            <h2>Email</h2>
+            <a href="mailto:josh@technocademy.org" class="btn btn-primary social-btn pull-right" target="_blank"><i class="fa fa-arrow-right"></i></a>
+            <a href="mailto:josh@technocademy.org" class="email" target="_blank"><p>josh@technocademy.org</p></a>
+        </div>
+    </div>
+</div>
+
 <!-- About Section -->
 <section id="about">
     <div class="container">
@@ -62,7 +88,7 @@
                             <i class="fa fa-comments fa-5x"></i>
                         </div>
                         <div class="timeline-button">
-                            <a href="html/about.html" class="btn btn-primary pull-right"><i class="fa fa-plus plus-icon"></i></a>
+                            <a href="/documentation" class="btn btn-primary pull-right"><i class="fa fa-plus plus-icon"></i></a>
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -79,7 +105,7 @@
                             <i class="fa fa-code fa-5x"></i>
                         </div>
                         <div class="timeline-button">
-                            <a href="html/business.html" class="btn btn-primary pull-left" id="leftElement1"><i class="fa fa-plus plus-icon"></i></a>
+                            <a href="/process" class="btn btn-primary pull-left" id="leftElement1"><i class="fa fa-plus plus-icon"></i></a>
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
