--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,6 +78,8 @@
             <i class="fa fa-5x fa-comment"></i>
             <hr>
             <h2>Messenger App</h2>
+            <p>@johnbot</p>
+            <br>
             <div class="fb-send-to-messenger"
                  messenger_app_id="1407796272604057"
                  page_id="158788994644801"
@@ -85,7 +87,6 @@
                  color="blue"
                  size="standard">
             </div>
-            <p>Josh Seides</p>
         </div>
         <div class="col-md-4">
             <i class="fa fa-5x fa-facebook"></i>
