--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,8 +78,6 @@
             <i class="fa fa-5x fa-comment"></i>
             <hr>
             <h2>Messenger App</h2>
-            <p>@johnbot</p>
-            <br>
             <div class="fb-send-to-messenger"
                  messenger_app_id="1407796272604057"
                  page_id="158788994644801"
@@ -96,7 +94,10 @@
             <p>@johnbot</p>
         </div>
         <div class="col-md-4">
-            <img src="img/code.png">
+            <i class="fa fa-5x fa-code-fork"></i>
+            <hr>
+            <h2>Messenger Code</h2>
+            <img src="img/code.png" class="code">
         </div>
     </div>
 </div>
