--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,7 +108,7 @@ footer, footer a:hover {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #f9c80e;
+    background-color: #ddb31a;
 }
 
 .header-image h1 {
