--- a/public/css/home-style.css
+++ b/public/css/home-style.css
@@ -49,8 +49,8 @@ div.container {
 }
 
 .btn:hover {
-    background: #ddb31a;
-    border: #ddb31a;
+    background: #f2c31a;
+    border: #f2c31a;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
@@ -159,8 +159,8 @@ div.container {
 }
 
 #about .timeline .timeline-button .btn {
-    background: #ddb31a;
-    border: #ddb31a;
+    background: #f2c31a;
+    border: #f2c31a;
 }
 
 #about .timeline .timeline-button .btn:hover {
@@ -513,7 +513,7 @@ div.container {
 }
 
 .jumbotron .quote:hover {
-  background-color: #ddb31a;
+  background-color: #f2c31a;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
@@ -551,7 +551,7 @@ div.container {
     padding-right: 10%;
     padding-bottom: 3%;
     color: #ffffff;
-    background: #ddb31a;
+    background: #f2c31a;
 }
 
 .social-media h1 {
@@ -573,9 +573,9 @@ div.container {
 }
 
 .social-media .social-btn {
-    color: #ddb31a;
-    background: #ddb31a;
-    border: #ddb31a;
+    color: #f2c31a;
+    background: #f2c31a;
+    border: #f2c31a;
     border-radius: 100%;
     padding: 5px 10px 5px 10px;
 }
@@ -594,4 +594,5 @@ div.container {
 .code {
     height: 50%;
     width: 50%;
+    display: block;
 }
