--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,6 +95,7 @@
         </div>
         <div class="col-md-4">
             <img src="img/code.png" class="code">
+            <p class="code-caption">Direct Messenger Code</p>
         </div>
     </div>
 </div>
