--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,10 @@
 
 <div class="space"></div>
 
+<div class="header-image">
+    <h1>Home</h1>
+</div>
+
 <div class="social-media">
     <h1>Access The John Bot</h1>
     <div class="row">
