--- a/public/css/home-style.css
+++ b/public/css/home-style.css
@@ -77,7 +77,7 @@ div.container {
     margin-bottom: 1.5%;
 }
 
-.intro-screen {
+.header-image {
     padding-left: 10%;
     padding-right: 10%;
     background-image: url('../img/background.png');
