--- a/public/css/home-style.css
+++ b/public/css/home-style.css
@@ -104,6 +104,8 @@ div.container {
     font-family: 'GothamBold';
     font-size: 2.5vw;
     color: #ba1616;
+    margin-right: 10%;
+    text-align: center;
 }
 
 #about .timeline .timeline-heading h4 {
