--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,12 +76,12 @@
 </div>
 
 <div class="social-media">
-    <div class="col-md-8">
+    <div class="col-md-8 access">
         <div class="row">
             <h1>Access The John Bot</h1>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 access">
                 <i class="fa fa-5x fa-comment"></i>
                 <hr>
                 <h2>Messenger App</h2>
