--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -10,7 +10,7 @@
     <meta name="author" content="Josh Seides">
     <meta name="keywords" content="John Bot">
 
-    <title>Home | The John Bot</title>
+    <title>Documentation | The John Bot</title>
 
     <!-- Custom CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
@@ -33,7 +33,6 @@
 <body>
 
 <!-- Nav Menu -->
-
 <div id="header" class="nav-header">
     <div class="container">
         <div id="cssmenu">
@@ -51,48 +50,21 @@
 
 <div class="space"></div>
 
+<div class="header-image">
+    <h1>Documentation</h1>
+</div>
+
 <!-- About Section -->
 <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image">
-                            <i class="fa fa-comments fa-5x"></i>
-                        </div>
-                        <div class="timeline-button">
-                            <a href="html/about.html" class="btn btn-primary pull-right"><i class="fa fa-plus plus-icon"></i></a>
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>Use The John Bot</h3>
-                                <h4 class="subheading">Documentation</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">See a list of key words and conversation initiators for The John Bot.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <i class="fa fa-code fa-5x"></i>
-                        </div>
-                        <div class="timeline-button">
-                            <a href="html/business.html" class="btn btn-primary pull-left" id="leftElement1"><i class="fa fa-plus plus-icon"></i></a>
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>Learn about The John Bot's Construction</h3>
-                                <h4 class="subheading">Process</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Read the technical expertise needed to code the Messenger bot and the basic workflow for the project.</p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <h1>Commands</h1>
+            <p>Bolded words are required for correct functionality. The remaining words can be changed in any way to make the conversation more natural.</p>
+            <hr>
+            <h2>Casual Conversation</h2>
+            <ul>
+                <li><b>Hello</b> John!</li>
+            </ul>
         </div>
     </div>
 </section>
