--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -17,6 +17,7 @@
     <link href="./css/menu.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/home-style.css" rel="stylesheet">
+    <link href="./css/documentation-style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -55,7 +56,7 @@
 </div>
 
 <!-- About Section -->
-<section id="about">
+<section class="docs">
     <div class="container">
         <div class="row">
             <h1>Commands</h1>
@@ -64,6 +65,33 @@
             <h2>Casual Conversation</h2>
             <ul>
                 <li><b>Hello</b> John!</li>
+                <li><b>How are you</b> today?</li>
+                <li><b>What</b> is <b>Heaven</b> like from your experience?</li>
+                <li><b>What</b> is <b>Hell</b> like from your visions?</li>
+                <li><b>Who</b> did you see <b>today</b> in your travels and visions?</li>
+            </ul>
+            <h2>Biography and Thematic Analysis</h2>
+            <ul>
+                <li><b>Who are you</b>?</li>
+                <li>How fascinating! Please <b>tell me more</b> about you.</li>
+                <li>Give me a strong analysis of <b>themes</b> in Revelation.</li>
+                <li><b>When</b> did you write the Book of Revelation?</li>
+                <li><b>Where</b> are you right now?</li>
+                <li>Give me a cool <b>allusion</b> you used in Revelation.</li>
+            </ul>
+            <h2>Revelation in the Arts Analysis</h2>
+            <ul>
+                <li>Drop a <b>meme</b>!</li>
+                <li>Give me an in-depth analysis of Revelation-inspired <b>art</b>.</li>
+                <li>What is your favorite <b>movie</b>? Give me some in-depth analysis on it, too!</li>
+                <li>What is your favorite <b>song</b>? Give me some in-depth analysis on it, too!</li>
+                <li>What is your favorite <b>poem</b>? Give me some in-depth analysis on it, too!</li>
+            </ul>
+            <h2>Miscellaneous</h2>
+            <ul>
+                <li>Drop a <b>verse</b> from Revelation!</li>
+                <li>Tell me a <b>joke</b>.</li>
+                <li>Let's play the Heaven or Hell game!</li>
             </ul>
         </div>
     </div>
