--- a/public/css/documentation-style.css
+++ b/public/css/documentation-style.css
@@ -44,7 +44,7 @@
 .docs h2 {
     font-family: 'SFBold';
     font-size: 20px;
-    color: #999999;
+    color: #ba1616;
 }
 
 @media all and (max-width: 700px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
@@ -56,7 +56,7 @@
 .docs p, .docs li {
     font-family: 'Roboto-Thin';
     font-weight: 700;
-    color: #000000
+    color: #999999
 }
 
 .docs strong, .docs b {
