--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <h1>Commands</h1>
-            <p>Bolded words are required for correct functionality. The remaining words can be changed in any way to make the conversation more natural.</p>
+            <p class="description">Bolded words are required for correct functionality. The remaining words can be changed in any way to make the conversation more natural.</p>
             <hr>
             <h2>Casual Conversation</h2>
             <ul>
@@ -94,7 +94,7 @@
             <ul>
                 <li>Drop a <b>verse</b> from Revelation!</li>
                 <li>Tell me a <b>joke</b>.</li>
-                <li>Let's play the Heaven or Hell game!</li>
+                <li>Let's play the Heaven or Hell <b>game</b>!</li>
             </ul>
         </div>
     </div>
