--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -60,15 +60,20 @@
     <div class="container">
         <div class="row">
             <h1>Commands</h1>
-            <p class="description">Bolded words are required for correct functionality. The remaining words can be changed in any way to make the conversation more natural.</p>
+            <p class="description">Bolded words are required for correct functionality. The remaining words can be
+                changed in any way to make the conversation more natural. Commands marked with an asterisk (*) are those
+                who have randomly-selected outputs, meaning they can be sent more than once with The John Bot responding with
+                a different message each time (possibly). The numbers in parentheses at the end of some commands represent
+                the numnber of different responses to expect.
+            </p>
             <hr>
             <h2>Casual Conversation</h2>
             <ul>
-                <li><b>Hello</b> John!</li>
-                <li><b>How are you</b> today?</li>
+                <li><b>Hello</b> John!*</li>
+                <li><b>How are you</b> today?*</li>
                 <li><b>What</b> is <b>Heaven</b> like from your experience?</li>
                 <li><b>What</b> is <b>Hell</b> like from your visions?</li>
-                <li><b>Who</b> did you see <b>today</b> in your travels and visions?</li>
+                <li><b>Who</b> did you see <b>today</b> in your travels and visions?*</li>
             </ul>
             <br>
             <h2>Biography and Thematic Analysis</h2>
@@ -78,12 +83,12 @@
                 <li>Give me a strong analysis of <b>themes</b> in Revelation.</li>
                 <li><b>When</b> did you write the Book of Revelation?</li>
                 <li><b>Where</b> are you right now?</li>
-                <li>Give me a cool <b>allusion</b> you used in Revelation.</li>
+                <li>Give me a cool <b>allusion</b> you used in Revelation.* (8)</li>
             </ul>
             <br>
             <h2>Revelation in the Arts Analysis</h2>
             <ul>
-                <li>Drop a <b>meme</b>!</li>
+                <li>Drop a <b>meme</b>!* (30)</li>
                 <li>Give me an in-depth analysis of Revelation-inspired <b>art</b>.</li>
                 <li>What is your favorite <b>movie</b>? Give me some in-depth analysis on it, too!</li>
                 <li>What is your favorite <b>song</b>? Give me some in-depth analysis on it, too!</li>
@@ -92,9 +97,9 @@
             <br>
             <h2>Miscellaneous</h2>
             <ul>
-                <li>Drop a <b>verse</b> from Revelation!</li>
-                <li>Tell me a <b>joke</b>.</li>
-                <li>Let's play the Heaven or Hell <b>game</b>!</li>
+                <li>Drop a <b>verse</b> from Revelation! * (all verses included)</li>
+                <li>Tell me a <b>joke</b>.*</li>
+                <li>Let's play the Heaven or Hell <b>game</b>!*</li>
             </ul>
         </div>
     </div>
