--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -62,7 +62,7 @@
             <h1>Commands</h1>
             <p class="description">Bolded words are required for correct functionality. The remaining words can be
                 changed in any way to make the conversation more natural. Commands marked with an asterisk (*) are those
-                who have randomly-selected outputs, meaning they can be sent more than once with The John Bot responding with
+                which have randomly-selected outputs, meaning they can be sent more than once with The John Bot responding with
                 a different message each time (possibly). The numbers in parentheses at the end of some commands represent
                 the numnber of different responses to expect.
             </p>
